@@ -415,6 +415,24 @@ function get_profiles () {
 	return $return;
 }
 
+/**
+ * Selects profiles filtered 
+ *
+ * @return array List of profiles filtered
+ */
+function get_profiles_filter ($filter) {
+	$sql = sprintf('SELECT * FROM tperfil WHERE %s', $filter);
+	$profiles = get_db_all_rows_sql ($sql);
+	$return = array ();
+	if ($profiles === false) {
+		return $return;
+	}
+	foreach ($profiles as $profile) {
+		$return[$profile["id_perfil"]] = $profile["name"];
+	}
+	return $return;
+}
+
 
 /**
  * Create Profile for User
